[package]
name = "sp-partner-chains-consensus-common"
version.workspace = true
description = "Consensus-agnostic primitives for Partner Chains block production"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-runtime = { optional = true, workspace = true }
sp-inherents = { optional = true, workspace = true }

[dev-dependencies]
sp-blockchain = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-consensus-slots/std",
	"sp-runtime/std",
	"sp-inherents/std",
]

[lib]
doctest = false
