[package]
name = "sc-partner-chains-consensus-safrole"
version.workspace = true
description = "Safrole VRF-based consensus engine for Partner Chains (JAM Gray Paper)"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
parity-scale-codec = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-slots = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-application-crypto = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-consensus-slots = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true, features = ["bandersnatch-experimental"] }
sp-inherents = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true, features = ["bandersnatch-experimental"] }
sp-runtime = { workspace = true, default-features = true }
sp-partner-chains-consensus-common = { workspace = true, default-features = true }
pallet-safrole = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
tokio = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

[lib]
doctest = false
